# looker-powerpoint

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agent-context.md  pyproject.toml
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: copilot-setup-steps.yml  make_docs.yml  publish.yml  pull-request.yml  release.yml  update-ai-context.yml
docs/: Makefile  api.rst  cli.rst  conf.py  docs.instructions.md  getting_started.rst  index.rst  models.rst  templating.rst
looker_powerpoint/: cli.py  find_alt_text.py  gemini.py  looker.py  looker_powerpoint.instructions.md  looker_v2.py  models.py
looker_powerpoint/tools/: find_alt_text.py  group_queries.py  pptx_text_handler.py  tools.instructions.md  url_to_hyperlink.py
test/: README.md  test.instructions.md  test_cli.py  test_gemini.py  test_integration.py  test_looker.py  test_looker_v2.py  test_pptx.py  test_tools.py
test/pptx/: gemini_textbox.md  gemini_textbox.pptx  table7x7.md  table7x7.pptx
