[project]
name = "looker_powerpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "looker-sdk>=25.10.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    "rich-argparse>=1.7.1",
    "rich>=14.1.0",
    "black>=25.1.0",
    "deepdiff>=8.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["looker_powerpoint"]

[project.scripts]
lppt = "looker_powerpoint.cli:main"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"
